2010-01-05  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c (x_new_font): Move code for setting rows/cols before
	resizing ...
	(x_set_window_size): ... to here. bug #2568.

	* gtkutil.c (xg_clear_under_internal_border): New function.
	(xg_frame_resized, xg_frame_set_char_size): Call
	xg_clear_under_internal_border.
	(xg_update_scrollbar_pos): Clear under old scroll bar position.
2010-01-05  Chong Yidong  <cyd@stupidchicken.com>

	* keyboard.c (read_key_sequence): Catch keyboard switch after
	making a new tty frame (Bug#5095).

2010-01-05  Kenichi Handa  <handa@m17n.org>

	* fontset.c (fontset_find_font): Fix getting the frame pointer.

2010-01-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dbusbind.c (xd_remove_watch): Avoid trying to convert a void* to
	Lisp_Object, preferring to convert a lisp_Object to a void* instead.
	(Fdbus_init_bus): Use XHASH to get a scalar value from a Lisp_Object.

2010-01-03  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (xd_add_watch): Improve debug message.
	(xd_remove_watch): Improve debug message.  If DATA is the session
	bus, unset D-Bus session environment.
	(Fdbus_init_bus): Pass the bus as argument to
	dbus_connection_set_watch_functions.  (Bug#5283)

2010-01-01  Chong Yidong  <cyd@stupidchicken.com>

	* nsterm.m (ns_get_color): Fix buffer overflow (Bug#4763).

	* lread.c (syms_of_lread): Make it clearer that these are the
	names of loaded files (Bug#5068).

	* eval.c (run_hook_with_args): Handle the case where the global
	value has the obsolete single-function form (Bug#5026).

2009-12-27  Chong Yidong  <cyd@stupidchicken.com>

	* minibuf.c (Fall_completions): Minor optimization.

2009-12-26  Eli Zaretskii  <eliz@gnu.org>

	* .gdbinit (pgx): Fix display of composite glyphs.
	Display cmp.from and cmp.to as well.
	(pitx): Fix last change.

2009-12-25  Kenichi Handa  <handa@m17n.org>

	* composite.h (composition_adjust_point): Update prototype.

	* composite.c (composition_reseat_it): Don't make a composition