@@ -1,3 +1,7 @@
+2010-01-06  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* xterm.c (x_clear_frame): Queue draw for scroll bars.
+
 2010-01-05  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* xterm.c (x_new_font): Move code for setting rows/cols before
